--- a/index.html
+++ b/index.html
@@ -2,27 +2,33 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Swiss Manager PRO XML Tool</title>
+<title>Swiss Manager ULTRA STABLE Tool</title>
 <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
 
 <style>
 body{font-family:ui-sans-serif;background:#fff;padding:30px;color:#111}
-.wrap{max-width:1000px;margin:auto;border:1px solid #e5e7eb;border-radius:12px;padding:20px}
-.tabs{display:flex;gap:8px;margin:10px 0}
+.wrap{max-width:1100px;margin:auto;border:1px solid #e5e7eb;border-radius:12px;padding:20px}
+.tabs{display:flex;gap:8px;margin:12px 0}
 .tab{padding:6px 12px;border:1px solid #ddd;border-radius:8px;cursor:pointer}
 .tab.active{background:#111;color:#fff}
 textarea{width:100%;height:420px;border:1px solid #e5e7eb;border-radius:8px;padding:10px;font-family:monospace}
-button{background:#111;color:#fff;border:none;padding:8px 14px;border-radius:8px;cursor:pointer;margin-top:10px}
+button{background:#111;color:#fff;border:none;padding:8px 14px;border-radius:8px;cursor:pointer;margin-right:6px}
+.info{font-size:13px;color:#666;margin-top:8px}
 </style>
 </head>
 
 <body>
 <div class="wrap">
 
-<h3>Swiss Manager PRO XML Generator</h3>
+<h3>Swiss Manager ULTRA STABLE XML Generator</h3>
 
 <input type="file" id="fileInput" accept=".xlsx,.xls">
+
+<br><br>
 <button onclick="loadFile()">LOAD FILE</button>
+<button onclick="buildXML()">GENERATE XML</button>
+<button onclick="downloadXML()">DOWNLOAD RAW XML</button>
+<button onclick="copyXML()">COPY XML</button>
 
 <div class="tabs">
 <div class="tab active" onclick="setTab('ALL',this)">ALL</div>
@@ -32,7 +38,7 @@ button{background:#111;color:#fff;border:none;padding:8px 14px;border-radius:8px
 <div class="tab" onclick="setTab('Results',this)">Results</div>
 </div>
 
-<button onclick="copyXML()">COPY XML</button>
+<div class="info" id="status">Belum load file.</div>
 
 <textarea id="output"></textarea>
 
@@ -54,6 +60,7 @@ function esc(v){
 }
 
 function rowsFromSheet(sheet){
+
  const raw=XLSX.utils.sheet_to_json(sheet,{header:1,defval:""});
  let headers=raw[0]||[];
 
@@ -67,26 +74,33 @@ function rowsFromSheet(sheet){
 }
 
 function buildTag(wb,sheetName,tagName,validator){
+
  if(!wb.Sheets[sheetName]) return "";
 
  const {headers,data}=rowsFromSheet(wb.Sheets[sheetName]);
 
+ let count=0;
  let xml=`<${sheetName}>\n`;
 
- data.forEach(r=>{
+ data.forEach((r,i)=>{
 
    if(!validator(r)) return;
 
    let attr="";
+
    headers.forEach(h=>{
      if(!h||!r[h]) return;
      attr+=` ${h}="${esc(r[h])}"`;
    });
 
    xml+=`  <${tagName}${attr}/>\n`;
+   count++;
  });
 
  xml+=`</${sheetName}>\n`;
+
+ document.getElementById("status").innerText =
+   `Sheet ${sheetName}: ${count} valid rows`;
 
  return xml;
 }
@@ -94,7 +108,7 @@ function buildTag(wb,sheetName,tagName,validator){
 function buildXML(){
 
  if(!workbookGlobal){
-   document.getElementById("output").value="Belum load file.";
+   alert("Load file dulu.");
    return;
  }
 
@@ -107,7 +121,7 @@ function buildXML(){
 
  if(currentTab==="ALL"||currentTab==="Players"){
    xml+=buildTag(workbookGlobal,"Players","Player",
-     r=>r.PlayerUniqueId&&r.Firstname);
+     r=>r.PlayerUniqueId&&(r.Firstname||r.Nama));
  }
 
  if(currentTab==="ALL"||currentTab==="TeamCompositions"){
@@ -128,7 +142,7 @@ function loadFile(){
 
  const file=document.getElementById("fileInput").files[0];
  if(!file){
-   alert("Pilih file dulu");
+   alert("Pilih file dulu.");
    return;
  }
 
@@ -137,25 +151,39 @@ function loadFile(){
  reader.onload=function(evt){
    const data=new Uint8Array(evt.target.result);
    workbookGlobal=XLSX.read(data,{type:"array"});
-   buildXML();
+   document.getElementById("status").innerText="File berhasil diload.";
  };
 
  reader.readAsArrayBuffer(file);
 }
 
 function setTab(tab,el){
-
  currentTab=tab;
-
  document.querySelectorAll(".tab").forEach(t=>t.classList.remove("active"));
  el.classList.add("active");
-
- buildXML();
 }
 
 function copyXML(){
- if(!lastXML) return alert("Belum ada XML");
+ if(!lastXML) return alert("Belum generate XML.");
  navigator.clipboard.writeText(lastXML);
+}
+
+function downloadXML(){
+
+ if(!lastXML){
+   alert("Generate XML dulu.");
+   return;
+ }
+
+ const blob=new Blob([lastXML],{type:"text/xml"});
+ const url=URL.createObjectURL(blob);
+
+ const a=document.createElement("a");
+ a.href=url;
+ a.download="swiss-manager-export.xml";
+ a.click();
+
+ URL.revokeObjectURL(url);
 }
 
 </script>
