--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Swiss Manager ULTRA STABLE Tool</title>
+<title>Swiss Manager xlsx to xml</title>
 <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
 
 <style>
@@ -20,7 +20,7 @@ button{background:#111;color:#fff;border:none;padding:8px 14px;border-radius:8px
 <body>
 <div class="wrap">
 
-<h3>Swiss Manager ULTRA STABLE XML Generator</h3>
+<h3>Swiss Manager XLSX TO XML Generator</h3>
 
 <input type="file" id="fileInput" accept=".xlsx,.xls">
 
