--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ button{background:#111;color:#fff;border:none;padding:8px 14px;border-radius:8px
 <body>
 <div class="wrap">
 
-<h3>Swiss Manager XLSX TO XML Generator</h3>
+<h3>Swiss Manager XLSX TO XML Generator 2</h3>
 
 <input type="file" id="fileInput" accept=".xlsx,.xls">
 <br><br>
